@@ -7,4 +7,4 @@ libclutter_box2d_@CLUTTER_BOX2D_MAJORMINOR@_la_LDFLAGS = @CLUTTER_BOX2D_LT_LDFLA
 libclutter_box2d_@CLUTTER_BOX2D_MAJORMINOR@_la_SOURCES = clutter-box2d.cpp
 
 clutter_box2dheaders_HEADERS = clutter-box2d.h
-clutter_box2dheadersdir = $(includedir)/clutter-0.6/clutter-box2d
+clutter_box2dheadersdir = $(includedir)/clutter-0.7/clutter-box2d
