@@ -1,3 +1,15 @@
+2008-05-16  Øyvind Kolås  <pippin@o-hand.com>
+
+	* Makefile.am:
+	* clutter-box2d.pc.in:
+	* clutter-box2d/Makefile.am:
+	* configure.ac: target clutter trunk (0.7.x)
+
+	* examples/actor-manipulator.c:
+	* examples/scene-prismatic-joint.c:
+	* examples/util.c: ported from clutter_texture_new_from_pixbuf to
+	clutter_texture_new_from_file.
+
 2008-04-17  Øyvind Kolås  <pippin@o-hand.com>
 
 	* clutter-box2d/clutter-box2d.cpp: add get_property vfunc to box2d
